--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,7 @@ p.typewriter {
 
 #work {
     flex-flow: column nowrap;
-    background-color: #8ea1e5;
+    background-color: #00c1bb;
 }
 
 .dev-title, .abilities-title, .next-title {
@@ -164,7 +164,7 @@ p.typewriter {
 }
 
 #abilities {
-    background-color: #00c1bb;
+    background-color: #fff;
     flex-flow: column;   
     justify-content: center;
     font-size: 24px;
@@ -191,7 +191,7 @@ h3 {
 }
 
 i {
-    font-size: 50px;
-    color: #fffdfd;
+    font-size: 40px;
+    color: #000;
     padding: 5px;
 }
