--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,13 @@ p {
     z-index: 2;
     padding: 20px;
     margin: 0;
+    letter-spacing: 1.1px;
+}
+
+span {
+    font-family: 'night_still_comesregular';
+    padding: 0;
+    margin: 0;
 }
 
 #greet-title {
@@ -139,6 +146,7 @@ p.typewriter {
     font-family: 'night_still_comesregular';
     z-index: 2;
     padding: 20px;
+    letter-spacing: 0;
 }
 
 /* The typing effect */
@@ -194,4 +202,120 @@ i {
     font-size: 40px;
     color: #000;
     padding: 5px;
+}
+
+/* SLIDER */
+
+.slider {
+    width: 700px;
+    height: 600px;
+    overflow-x: scroll;
+}
+
+.slide {
+    float: left;
+    width: 700px;
+    height: 600px;
+}
+
+.holder {
+    width: 500%;
+}
+
+#rttm-a {
+    background-image: url("img/rttm_laptop.png");
+    background-repeat: no-repeat;
+    background-size: 650px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+#clm-a {
+    background-image: url("img/clm_laptop.png");
+    background-repeat: no-repeat;
+    background-size: 650px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+#ponderosa-a {
+    background-image: url("img/ponderosa_laptop.png");
+    background-repeat: no-repeat;
+    background-size: 650px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+#twobwired-a {
+    background-image: url("img/2bwired_laptop.png");
+    background-repeat: no-repeat;
+    background-size: 650px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+#tcnm-a {
+    background-image: url("img/tcnm_laptop.png");
+    background-repeat: no-repeat;
+    background-size: 650px;
+    display: block;
+    height: 400px;
+    overflow: hidden;
+    text-indent: 100%;
+    white-space: nowrap;
+}
+
+.proj-title {
+    font-family: 'znikomitregular';
+    font-weight: bold;
+    font-size: 36px;
+    text-align: center;
+    letter-spacing: 1.8px;
+}
+
+.proj-descr {
+    font-family: 'znikomitregular';
+    font-weight: bold;
+    font-size: 22px;
+    text-align: center;
+    letter-spacing: 1.8px;
+    margin-bottom: 14px;
+}
+
+.slide:before {
+    /* content: ""; */
+    /* position: absolute; */
+    /* bottom: 0; */
+    /* left: 0; */
+    /* width: 100%; */
+    /* height: 40%; */
+    /* background: linear-gradient(transparent, black); */
+}
+.slider-nav {
+    text-align: center;
+    margin: 10px 0 0 0;
+}
+.slider-nav a {
+    width: 10px;
+    height: 10px;
+    display: inline-block;
+    background: #ddd;
+    overflow: hidden;
+    text-indent: -9999px;
+    border-radius: 50%;
+}
+.slider-nav a.active {
+    background: #999;
 }
