--- a/styles/fonts/fonts.css
+++ b/styles/fonts/fonts.css
@@ -48,10 +48,10 @@
     font-style: normal;
 }
 
-/* @font-face {
+@font-face {
     font-family: 'znikomitregular';
     src: url('znikomit-webfont.woff2') format('woff2'),
          url('znikomit-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-} */
+}
