--- a/styles.css
+++ b/styles.css
@@ -1,321 +1,12 @@
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    background-color: #fffdfd;
+#myVideo, #myCanvas {
+    position: absolute;
+    left: 0;
+    top: 0;
 }
-
-header {
-    position: fixed;
-    width: 100%;
-    z-index: 0;
-}
-
-.header-container {
-    width:0;
-    height:0;
-    border-top: 250px solid #8ea1e5;
-    border-right: 250px solid transparent;
-    z-index: 0;
-    position: fixed;
-}
-
-.anchor-nav {
-    display: grid;
-    font-size: 20px;
-    z-index: 1;
-    margin-left: 150px;
-    line-height: 28px;
-    list-style: none;
-    position: fixed;
-    top: 90px;
-}
-
-section {
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    text-align: center;
-    color: #000;
-    font-family: 'violetteregular';
-    font-size: 50px;
-}
-
-.full-screen {
-    height: 100%;
-}
-
-.sw {
-    position: fixed;
-    left: 10px;
-    top: 20px;
-}
-
-.dot {
-    position: fixed;
-    left: 115px;
-    top: 90px;
-}
-
-.photo {
-    border-radius: 50%;
-}
-
-.photo:hover {
-    width: 200;
-}
-
-.down-arrow {
-    z-index: -1;
-}
-
-a {
-    color: black;
-    font-size: 30px;
-    font-family: 'print_clearlyregular';
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration-line: underline;
-}
-
-a:focus {
-    color: #e55e86;
-}
-
-a.active, a#greetings-anchor.active, a#story-anchor.active, a#work-anchor.active, a#abilities-anchor.active, a#next-anchor.active {
-    color: #e55e86;
-    font-size: 40px;
-}
-
-p {
-    font-family: 'night_still_comesregular';
-    z-index: 2;
-    padding: 20px;
-    margin: 0;
-    letter-spacing: 1.1px;
-}
-
-span {
-    font-family: 'night_still_comesregular';
-    padding: 0;
-    margin: 0;
-}
-
-#greet-title {
-    position: relative !important;
-    left: 0 !important;
-    top: 0 !important;
-    width: 100% !important;
-    padding-top: 10px;
-}
-
-.arrow-up {
-    width: 0; 
-    height: 0; 
-    border-left: 10px solid transparent;
-    border-right: 10px solid transparent;    
-    border-bottom: 10px solid #e55e86;
-    margin: auto;
-}
-
-#p-container {
-    font-family: sans-serif;
-    text-align: center;
-    margin: auto;
-    width: 33%;
-    font-size: 18px;
-    z-index: 1;
-}
-
-#summary-quote {
-    background-color: #e55e86;
-}
-
-p.typewriter {
-    color: #000;
-    background-color: #e55e86;
-    overflow: hidden;
-    border-right: 2px solid #000;
-    white-space: nowrap;
+#myVideo {
     margin: 0 auto;
-    animation: 
-        typing 5s steps(30, end),
-        blink-caret .5s step-end infinite;
-    font-family: 'night_still_comesregular';
-    z-index: 2;
-    padding: 20px;
-    letter-spacing: 0;
 }
+#myCanvas {
+    z-index: 10;
 
-/* The typing effect */
-@keyframes typing {
-    from { width: 0 }
-    to { width: 75% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    5% { border-color: #000 }
-}
-
-#work {
-    flex-flow: column nowrap;
-    background-color: #00c1bb;
-}
-
-.dev-title, .abilities-title, .next-title {
-    padding: 40px;
-    font-size: 50px;
-}
-
-#abilities {
-    background-color: #fff;
-    flex-flow: column;   
-    justify-content: center;
-    font-size: 24px;
-}
-
-#next {
-    background-color: #ffd11c;
-    flex-flow: column;
-    justify-content: center;
-    font-size: 18px;
-}
-
-.devicons {
-    flex-flow: column wrap;
-}
-
-h3 {
-    font-family: 'adamnormal';
-    margin: 10px;
-}
-
-.devicons {
-    flex-flow: row wrap;
-}
-
-i {
-    font-size: 40px;
-    color: #000;
-    padding: 5px;
-}
-
-/* SLIDER */
-
-.slider {
-    width: 700px;
-    height: 600px;
-    overflow-x: scroll;
-}
-
-.slide {
-    float: left;
-    width: 700px;
-    height: 600px;
-}
-
-.holder {
-    width: 500%;
-}
-
-#rttm-a {
-    background-image: url("img/rttm_laptop.png");
-    background-repeat: no-repeat;
-    background-size: 650px;
-    display: block;
-    height: 400px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-
-#clm-a {
-    background-image: url("img/clm_laptop.png");
-    background-repeat: no-repeat;
-    background-size: 650px;
-    display: block;
-    height: 400px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-
-#ponderosa-a {
-    background-image: url("img/ponderosa_laptop.png");
-    background-repeat: no-repeat;
-    background-size: 650px;
-    display: block;
-    height: 400px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-
-#twobwired-a {
-    background-image: url("img/2bwired_laptop.png");
-    background-repeat: no-repeat;
-    background-size: 650px;
-    display: block;
-    height: 400px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-
-#tcnm-a {
-    background-image: url("img/tcnm_laptop.png");
-    background-repeat: no-repeat;
-    background-size: 650px;
-    display: block;
-    height: 400px;
-    overflow: hidden;
-    text-indent: 100%;
-    white-space: nowrap;
-}
-
-.proj-title {
-    font-family: 'znikomitregular';
-    font-weight: bold;
-    font-size: 36px;
-    text-align: center;
-    letter-spacing: 1.8px;
-}
-
-.proj-descr {
-    font-family: 'znikomitregular';
-    font-weight: bold;
-    font-size: 22px;
-    text-align: center;
-    letter-spacing: 1.8px;
-    margin-bottom: 14px;
-}
-
-.slide:before {
-    /* content: ""; */
-    /* position: absolute; */
-    /* bottom: 0; */
-    /* left: 0; */
-    /* width: 100%; */
-    /* height: 40%; */
-    /* background: linear-gradient(transparent, black); */
-}
-.slider-nav {
-    text-align: center;
-    margin: 10px 0 0 0;
-}
-.slider-nav a {
-    width: 10px;
-    height: 10px;
-    display: inline-block;
-    background: #ddd;
-    overflow: hidden;
-    text-indent: -9999px;
-    border-radius: 50%;
-}
-.slider-nav a.active {
-    background: #999;
 }
